clusters/main/kubernetes/system/networkpolicies/app/vscode-allow-ingress-gatus-internal.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-gatus-internal
  namespace: vscode
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vscode
      app.kubernetes.io/name: code-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gatus
            k8s:app.kubernetes.io/instance: gatus
            k8s:app.kubernetes.io/name: gatus
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
